Synchronisation check et animation decalage

--- a/Restaurants/restaurant2.html
+++ b/Restaurants/restaurant2.html
@@ -31,7 +31,7 @@
                 <ul class="entrees">                    
                     <h2 class="subtitle_lacarte">ENTRÉES</h2> 
                     <a href="#">             
-                    <li class="menu1">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Ravioles de foie gras</h3>
@@ -45,7 +45,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu2">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Caviar osciètre</h3>
@@ -59,7 +59,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu3">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Homard et espuma de potiron</h3>
@@ -73,7 +73,7 @@
                             </div>
                         </article>
                     </li>
-                    <li class="menu4">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Foie gras de canard cuit entier</h3>
@@ -90,7 +90,7 @@
                 </ul>                                                     
                 <ul class="plates">                    
                     <h2 class="subtitle_lacarte">PLATS</h2>
-                    <li class="menu5">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Noix de coquilles Saint-Jacques</h3>
@@ -104,7 +104,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu6">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Langoustine poêlée</h3>
@@ -118,7 +118,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu7">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Mijoté de queue de bœuf</h3>
@@ -135,7 +135,7 @@
                 </ul>
                 <ul class="desserts">                    
                     <h2 class="subtitle_lacarte">DESSERTS</h2>                    
-                    <li class="menu8">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Macaron noisette et chocolat</h3>
@@ -149,7 +149,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu9">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Baba au rhum revisité</h3>
@@ -163,7 +163,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu10">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Tarte au citron meringuée</h3>
@@ -190,7 +190,7 @@
             </section>                                                    
         </main>
         <footer class="footer_restaurants">
-            <img src="/Assets/Images/logo/ohmyfood.png" class="logo_footer2" alt="logo.png">
+            <img src="../Assets/Images/logo/ohmyfood.png" class="logo_footer2" alt="logo.png">
             <div class="footer-container">
                 <ul class="links">
                     <li><i class="fa-solid fa-utensils" aria-hidden="true"><b class="logofooter-txt"> Proposer un restaurant</b></i></a></li>
