--- a/Restaurants/restaurant3.html
+++ b/Restaurants/restaurant3.html
@@ -34,7 +34,7 @@
                 <ul class="entrees">                    
                     <h2 class="subtitle_lacarte">ENTRÉES</h2> 
                     <a href="#">             
-                    <li class="menu1">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Tartare de poulpe acidulé</h3>
@@ -48,7 +48,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu2">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Velouté de légumes d'antan</h3>
@@ -62,7 +62,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu3">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Soupe à l'oignon</h3>
@@ -79,7 +79,7 @@
                 </ul>                                                     
                 <ul class="plates">                    
                     <h2 class="subtitle_lacarte">PLATS</h2>
-                    <li class="menu4">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Coquilles Saint-Jacques</h3>
@@ -93,7 +93,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu5">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Magret de canard</h3>
@@ -107,7 +107,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu6">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Pigeonneau d’Ille-et-Vilaine</h3>
@@ -124,7 +124,7 @@
                 </ul>
                 <ul class="desserts">                    
                     <h2 class="subtitle_lacarte">DESSERTS</h2>                    
-                    <li class="menu7">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Pétales de violettes glacés</h3>
@@ -138,7 +138,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu8">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Fondant au chocolat</h3>
@@ -152,7 +152,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu9">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Millefeuille croustillant</h3>
@@ -178,7 +178,7 @@
             </section>                                                    
         </main>
         <footer class="footer_restaurants">
-            <img src="/Assets/Images/logo/ohmyfood.png" class="logo_footer2" alt="logo.png">
+            <img src="../Assets/Images/logo/ohmyfood.png" class="logo_footer2" alt="logo.png">
             <div class="footer-container">
                 <ul class="links">
                     <li><i class="fa-solid fa-utensils" aria-hidden="true"><b class="logofooter-txt"> Proposer un restaurant</b></i></a></li>
