--- a/Restaurants/restaurant4.html
+++ b/Restaurants/restaurant4.html
@@ -31,7 +31,7 @@
                 <ul class="entrees">                   
                     <h2 class="subtitle_lacarte">ENTRÉES</h2>
                     <a href="#">
-                    <li class="menu1">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Tartare de thon</h3>
@@ -45,7 +45,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu2">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Bouchée de homard croustillant</h3>
@@ -59,7 +59,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu3">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Poulet rôti aux herbes de Provence</h3>
@@ -76,7 +76,7 @@
                 </ul>                                                     
                 <ul class="plates">                    
                     <h2 class="subtitle_lacarte">PLATS</h2>
-                    <li class="menu4">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Poulet rôti aux herbes de Provence</h3>
@@ -90,7 +90,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu5">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Langouste rôtie</h3>
@@ -104,7 +104,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu6">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Côte de bœuf Angus</h3>
@@ -121,7 +121,7 @@
                 </ul>
                 <ul class="desserts">                    
                     <h2 class="subtitle_lacarte">DESSERTS</h2>                    
-                    <li class="menu7">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Farandole de desserts</h3>
@@ -135,7 +135,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu8">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Crème brulée</h3>
@@ -149,7 +149,7 @@
                             </div>
                         </article>
                     </li>             
-                    <li class="menu9">
+                    <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Tiramisu</h3>
@@ -175,7 +175,7 @@
             </section>                                                    
         </main>
         <footer class="footer_restaurants">
-            <img src="/Assets/Images/logo/ohmyfood.png" class="logo_footer2" alt="logo.png">
+            <img src="../Assets/Images/logo/ohmyfood.png" class="logo_footer2" alt="logo.png">
             <div class="footer-container">
                 <ul class="links">
                     <li><i class="fa-solid fa-utensils" aria-hidden="true"><b class="logofooter-txt"> Proposer un restaurant</b></i></a></li>
