Vérification du CSS restaurants au W3C

--- a/Restaurants/restaurant2.html
+++ b/Restaurants/restaurant2.html
@@ -16,9 +16,9 @@
         <header>
             <div class="logopages">
             <a href="../index.html"><i class="fa-solid fa-left-long"></i></a>
-            <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo" title="Ohmyfood" id="logo"></a>
+            <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo" title="Ohmyfood" id="logo">
             </div>
-            <img class="img-enchantee" src="../Assets/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat rond" class="enchantee">
+            <img class="img-enchantee" src="../Assets/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat rond">
         </header> 
         <main>
             <section class="lacarte">
@@ -29,8 +29,7 @@
                     </div>
                 </div>                                        
                 <ul class="entrees">                    
-                    <h2 class="subtitle_lacarte">ENTRÉES</h2> 
-                    <a href="#">             
+                    <li class="subtitle_lacarte">ENTRÉES</li>            
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
@@ -89,7 +88,7 @@
                     </li>                         
                 </ul>                                                     
                 <ul class="plates">                    
-                    <h2 class="subtitle_lacarte">PLATS</h2>
+                    <li class="subtitle_lacarte">PLATS</li>
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
@@ -134,7 +133,7 @@
                     </li>             
                 </ul>
                 <ul class="desserts">                    
-                    <h2 class="subtitle_lacarte">DESSERTS</h2>                    
+                    <li class="subtitle_lacarte">DESSERTS</li>                    
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
@@ -177,15 +176,10 @@
                             </div>
                         </article>
                     </li>             
-                    </a>
                 </ul>
-
                 <div class="commander">
-                    <a href="#">                       
-                    <button disabled="" class="searchbutton" value="rechercher">
+                    <a href="#" class="searchbutton">
                         <abbr class="glass">Commander</abbr></a>
-                    </button>
-                    </a>
                 </div>
             </section>                                                    
         </main>
@@ -193,12 +187,12 @@
             <img src="../Assets/Images/logo/ohmyfood.png" class="logo_footer2" alt="logo.png">
             <div class="footer-container">
                 <ul class="links">
-                    <li><i class="fa-solid fa-utensils" aria-hidden="true"><b class="logofooter-txt"> Proposer un restaurant</b></i></a></li>
+                    <li><i class="fa-solid fa-utensils" aria-hidden="true"><b class="logofooter-txt"> Proposer un restaurant</b></i></li>
                     <li class="rotate">
                         <i class="fa-solid fa-handshake-simple" aria-hidden="true"></i>
                         <b class="logofooter-txt2"> Devenir partenaire</b>
                     </li>
-                    <li><b>Mentions légales</b></a></li>
+                    <li><b>Mentions légales</b></li>
                     <li><a href="mailto:restaurant@ohmyfood.com"><b>Contact</b></a></li>
                 </ul>
             </div>
