--- a/Restaurants/restaurant3.html
+++ b/Restaurants/restaurant3.html
@@ -16,24 +16,20 @@
         <header>
             <div class="logopages">
             <a href="../index.html"><i class="fa-solid fa-left-long"></i></a>
-            <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo" title="Ohmyfood" id="logo"></a>
+            <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo" title="Ohmyfood" id="logo">
             </div>
-            <img class="img-restaurant" src="../Assets/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat rond" class="lapalette">
+            <img class="img-restaurant" src="../Assets/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat rond">
         </header> 
         <main>
             <section class="lacarte">
                 <div class="titre_lacarte_coeur">                
                     <h1 class="titre_lacarte">À la française</h1>
-
-
-                    </h1>
                     <div class="coeur1">
                        <i class="fa-solid fa-heart gris" aria-hidden="true"></i>
                     </div>
                 </div>                                        
                 <ul class="entrees">                    
-                    <h2 class="subtitle_lacarte">ENTRÉES</h2> 
-                    <a href="#">             
+                    <li class="subtitle_lacarte">ENTRÉES</li>              
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
@@ -78,7 +74,7 @@
                     </li>             
                 </ul>                                                     
                 <ul class="plates">                    
-                    <h2 class="subtitle_lacarte">PLATS</h2>
+                    <li class="subtitle_lacarte">PLATS</li>
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
@@ -123,7 +119,7 @@
                     </li>             
                 </ul>
                 <ul class="desserts">                    
-                    <h2 class="subtitle_lacarte">DESSERTS</h2>                    
+                    <li class="subtitle_lacarte">DESSERTS</li>                    
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
@@ -166,14 +162,10 @@
                             </div>
                         </article>
                     </li>             
-                    </a>
                 </ul>
                 <div class="commander">
-                    <a href="#">                       
-                    <button disabled="" class="searchbutton" value="rechercher">
+                    <a href="#" class="searchbutton">
                         <abbr class="glass">Commander</abbr></a>
-                    </button>
-                    </a>
                 </div>
             </section>                                                    
         </main>
@@ -181,12 +173,12 @@
             <img src="../Assets/Images/logo/ohmyfood.png" class="logo_footer2" alt="logo.png">
             <div class="footer-container">
                 <ul class="links">
-                    <li><i class="fa-solid fa-utensils" aria-hidden="true"><b class="logofooter-txt"> Proposer un restaurant</b></i></a></li>
+                    <li><i class="fa-solid fa-utensils" aria-hidden="true"><b class="logofooter-txt"> Proposer un restaurant</b></i></li>
                     <li class="rotate">
                         <i class="fa-solid fa-handshake-simple" aria-hidden="true"></i>
                         <b class="logofooter-txt2"> Devenir partenaire</b>
                     </li>
-                    <li><b>Mentions légales</b></a></li>
+                    <li><b>Mentions légales</b></li>
                     <li><a href="mailto:restaurant@ohmyfood.com"><b>Contact</b></a></li>
                 </ul>
             </div>
