--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             <div class="explorer">
                 <h1 class="section-title">Réservez le menu qui vous convient</h1>
                 <p class="sub-title">Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
-                <a href="#restaurants" class="searchbutton">Explorer nos restaurants</a>
+                <a href="#restaurants" class="searchbutton">
+                    <abbr class="glass">Explorer nos restaurants</abbr></a>
             </div>
         <main>
         <section class="fonctionnement">
