--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h1 class="section-title">Réservez le menu qui vous convient</h1>
                 <p class="sub-title">Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
                 <a href="#restaurants" class="searchbutton">
-                    <abbr class="glass">Explorer nos restaurants</abbr></a>
+                    <abbr>Explorer nos restaurants</abbr></a>
             </div>
         <main>
         <section class="fonctionnement">
