--- a/Restaurants/restaurant4.html
+++ b/Restaurants/restaurant4.html
@@ -25,7 +25,7 @@
                 <div class="titre_lacarte_coeur">                
                     <h1 class="titre_lacarte">Le délice des sens</h1>
                     <div class="coeur1">
-                        <i class="fa-solid fa-heart " aria-hidden="true"></i>
+                        <i class="fa-solid fa-heart gris3" aria-hidden="true"></i>
                     </div>
                 </div>                                       
                 <ul class="entrees">                   
