--- a/Restaurants/restaurant1.html
+++ b/Restaurants/restaurant1.html
@@ -165,7 +165,7 @@
                 </ul>
                 <div class="commander">
                     <a href="#" class="searchbutton">
-                        <abbr class="btn-restaurant">Commander</abbr></a>                
+                        <abbr>Commander</abbr></a>                
                 </div>
             </section>                                                    
         </main>
