--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <section class="menus">
             <h2 id="restaurants" class="section-title3">Restaurants</h2>
             <div  class="cartes">
-                <a href="Restaurants/restaurant1.html">
+                <a class="wrap" href="Restaurants/restaurant1.html">
                     <article class="carte">
                         <div class="image-container">
                             <img class="img-lapalette-accueil" src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat rond">                          
@@ -71,7 +71,7 @@
                         </div>
                     </article>
                 </a>
-                <a href="Restaurants/restaurant2.html">
+                <a class="wrap" href="Restaurants/restaurant2.html">
                     <article class="carte">
                         <div class="image-container">
                             <img class="img-enchantee-accueil"  src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat rond">
@@ -86,7 +86,7 @@
                         </div>
                     </article>
                 </a>
-                <a href="Restaurants/restaurant3.html">
+                <a class="wrap" href="Restaurants/restaurant3.html">
                     <article class="carte">
                         <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat rond">
                         <div class="carte-txt">    
@@ -98,7 +98,7 @@
                         </div>
                     </article>
                 </a>
-                <a href="Restaurants/restaurant4.html">
+                <a class="wrap" href="Restaurants/restaurant4.html">
                     <article class="carte">
                         <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat rectangulaire">
                         <div class="carte-txt">    
