Ajustement des menus et du check

--- a/Restaurants/restaurant1.html
+++ b/Restaurants/restaurant1.html
@@ -47,7 +47,7 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Foie gras de canard mi-cuit</h3>
+                                <h3 class="titre_menus_canard">Foie gras de canard mi-cuit</h3>
                                 <span class="accompagnement">Et ses copeaux de truffe noire</span>
                             </div>
                             <div class="validation"> 
@@ -79,7 +79,7 @@
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Filet de bœuf aux herbes</h3>
-                                <span class="accompagnement">Accompagné de sa ribambelle de légumes</span>
+                                <span class="accompagnement_ribambelle">Accompagné de sa ribambelle de légumes</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">40€</p>                                
@@ -152,7 +152,7 @@
                         <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Mousse au chocolat</h3>
-                                <span class="accompagnement">Au piment d'Espelette et à la truffe noire</span>
+                                <span class="accompagnement_truffe">Au piment d'Espelette et à la truffe noire</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">23€</p>                                
